# rust_embedded_project_template

./: Cargo.toml
src/: main.rs
