[package]
name = "rust_embedded_project_template"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.5"
panic-halt = "1.0.0"
nb = "1"
stm32f1xx-hal = {version = "0.10.0", features = ["stm32f103", "rt"]}
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
# ssd1306 = "0.8.0"
# embedded-graphics = "0.8.0"

[[bin]]
name = "rust_embedded_project_template"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 2
overflow-checks = true
panic = "abort"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
panic = "abort"

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0